--- a/develop-problem-C/PaperC/sections/02_assumptions.tex
+++ b/develop-problem-C/PaperC/sections/02_assumptions.tex
@@ -7,7 +7,7 @@
     
     \item \textbf{Sincere Voting.} Viewers vote for favorites, not strategically.
     
-    \item \textbf{Truthful Elimination.} Announced outcomes reflect stated rules; deviations are detectable anomalies.
+    \item \textbf{Truthful Elimination.} Announced outcomes reflect stated rules; deviations are detectable model-data mismatches.
     
     \item \textbf{Vote Floor.} Each contestant receives minimum share $\epsilon > 0$ (default 1\%).
     
