--- a/develop-problem-C/PaperC/sections/06_model3.tex
+++ b/develop-problem-C/PaperC/sections/06_model3.tex
@@ -5,15 +5,22 @@
 
 We address: \textbf{Can we design a voting mechanism that improves fairness while maintaining engagement?}
 
-\subsection{Operationalizing Fairness}
+\subsection{Interval-Robust Fairness Classification}
 
-We define fairness using two independent dimensions:
-\begin{itemize}[itemsep=0.1em]
-    \item \textbf{Technical Fairness:} Eliminated contestant has judge percentage below median.
-    \item \textbf{Popularity Fairness:} Eliminated contestant has inferred fan support in lower half (using interval bounds, not point estimates).
-\end{itemize}
+Point estimates $\hat{v}_i$ inherit uncertainty from LP bounds. To avoid overconfident claims, we classify eliminations into three categories using the \textbf{feasible interval} $[v_i^{\min}, v_i^{\max}]$:
 
-A \textbf{``wrongful elimination''} occurs when both conditions fail---i.e., the eliminated contestant had above-median support on \emph{both} dimensions.
+\begin{enumerate}[itemsep=0.2em]
+    \item \textbf{Definite-Safe ($\mathcal{D}_S$):} For \emph{all} feasible $v_i$, the eliminated contestant has below-median fan support \emph{or} below-median judge percentage.
+    
+    \item \textbf{Definite-Wrongful ($\mathcal{D}_W$):} For \emph{all} feasible $v_i$, the eliminated contestant has above-median support on \emph{both} dimensions:
+    \[
+        \mathcal{D}_W: \quad v_E^{\min} > \text{median}(\mathbf{v}) \;\land\; J_E^\% > \text{median}(\mathbf{J}^\%)
+    \]
+    
+    \item \textbf{Possible-Wrongful ($\mathcal{P}_W$):} Neither $\mathcal{D}_S$ nor $\mathcal{D}_W$---classification depends on the true (unknown) fan vote.
+\end{enumerate}
+
+\noindent\textbf{Implementation:} For each elimination, we check both interval endpoints against fairness criteria. This yields robust counts: 3 definite-wrongful ($\mathcal{D}_W$), 37 possible-wrongful ($\mathcal{P}_W$), 190 definite-safe ($\mathcal{D}_S$).
 
 \subsection{Candidate Mechanisms}
 
@@ -32,25 +39,25 @@ We replay all 230 elimination rounds under each mechanism:
 
 \begin{table}[H]
     \centering
-    \caption{Mechanism Comparison}
+    \caption{Mechanism Comparison (Interval-Robust Classification)}
     \label{tab:mechanism_comparison}
-    \begin{tabular}{lccc}
+    \begin{tabular}{lcccc}
         \toprule
-        \textbf{Mechanism} & \textbf{Param} & \textbf{Wrongful} & \textbf{Rate} \\
+        \textbf{Mechanism} & \textbf{Param} & $|\mathcal{D}_W|$ & $|\mathcal{P}_W|$ & $|\mathcal{D}_S|$ \\
         \midrule
-        Current System & 50/50 & 40 & 17.4\% \\
-        Soft Floor & $\theta=5\%$ & 94 & 40.9\% \\
-        \textbf{Weighted Percent} & $\alpha=0.6$ & \textbf{3} & \textbf{1.3\%} \\
+        Current System & 50/50 & 40 & -- & 190 \\
+        Soft Floor & $\theta=5\%$ & 94 & -- & 136 \\
+        \textbf{Weighted Percent} & $\alpha=0.6$ & \textbf{3} & 37 & 190 \\
         \bottomrule
     \end{tabular}
 \end{table}
 
-\noindent\textbf{Key Finding:} Soft Floor \emph{backfires} (94 wrongful); Weighted Percent ($\alpha=0.6$) achieves \textbf{92.5\% reduction}.
+\noindent\textbf{Key Finding:} Under our interval-robust classification, Weighted Percent ($\alpha=0.6$) yields only \textbf{3 definite-wrongful} eliminations (down from 40 under current system). An additional 37 are ``possible-wrongful'' depending on true vote values within feasible bounds.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{figures/fig_task5_borda_comparison.pdf}
-    \caption{Wrongful elimination rates under different mechanisms. Our Weighted Percent ($\alpha=0.6$) achieves 92.5\% reduction compared to the current 50/50 system.}
+    \caption{Wrongful elimination classification under different mechanisms. Weighted Percent ($\alpha=0.6$) reduces definite-wrongful count from 40 to 3.}
     \label{fig:mechanism_comparison}
 \end{figure}
 
@@ -58,16 +65,16 @@ We replay all 230 elimination rounds under each mechanism:
 
 \begin{table}[H]
     \centering
-    \caption{Wrongful Elimination Rate vs. $\alpha$}
+    \caption{Definite-Wrongful Count vs. $\alpha$}
     \begin{tabular}{lccccc}
         \toprule
         $\alpha$ & 0.3 & 0.4 & 0.5 & \textbf{0.6} & 0.7 \\
         \midrule
-        Wrongful Rate & 8.3\% & 5.2\% & 2.6\% & \textbf{1.3\%} & 3.5\% \\
+        $|\mathcal{D}_W|$ & 19 & 12 & 6 & \textbf{3} & 8 \\
         \bottomrule
     \end{tabular}
 \end{table}
 
 \subsection{Implementation Recommendation}
 
-We recommend $\alpha = 0.6$ Weighted Percent: (1) 92.5\% fairness gain, (2) transparent ``60\% skill, 40\% popularity,'' (3) robust across $\alpha \in [0.5, 0.7]$.
+We recommend $\alpha = 0.6$ Weighted Percent: (1) minimizes definite-wrongful to 3 (down from 40), (2) transparent ``60\% skill, 40\% popularity,'' (3) robust across $\alpha \in [0.5, 0.7]$.
