--- a/develop-problem-C/PaperC/appendices/ai_report.tex
+++ b/develop-problem-C/PaperC/appendices/ai_report.tex
@@ -14,13 +14,13 @@
 \midrule
 Claude & Model Design & LP/CP framework formulation \\
 Claude & Code & Python \texttt{dwts\_model} package \\
-Claude & Analysis & Money Plot anomaly detection \\
+Claude & Analysis & Money Plot mismatch detection \\
 ChatGPT & Writing & Grammar polish (technical content by team) \\
 \bottomrule
 \end{tabularx}
 \end{table}
 
-\textbf{Verification:} All AI outputs reviewed and tested. Key results (92.5\% improvement, S32/S33 anomalies) independently validated. LP formulations checked against optimization textbooks.
+\textbf{Verification:} All AI outputs reviewed and tested. Key results (40→3 definite-wrongful reduction, S32/S33 mismatches) independently validated. LP/MILP formulations checked against optimization textbooks.
 
 \textbf{Human-Only Contributions:} Problem formulation, data collection, result interpretation, policy recommendations, final parameter choices ($\alpha = 0.6$, $\epsilon = 1\%$).
 
