--- a/develop-problem-C/PaperC/sections/07_sensitivity.tex
+++ b/develop-problem-C/PaperC/sections/07_sensitivity.tex
@@ -13,9 +13,9 @@ We conduct systematic sensitivity analysis to validate our models' robustness ac
 The floor parameter $\epsilon$ controls the minimum vote share constraint in Model 1. We vary $\epsilon$ from 0\% to 10\% and examine:
 
 \begin{itemize}[itemsep=0.2em]
-    \item \textbf{Feasibility rate:} Proportion of seasons with feasible vote distributions.
+    \item \textbf{Feasibility rate:} Proportion of seasons with $S^* = 0$.
     \item \textbf{Bound tightness:} Average interval width $v_i^{\max} - v_i^{\min}$.
-    \item \textbf{Anomaly detection:} Which seasons become infeasible at each $\epsilon$.
+    \item \textbf{Mismatch detection:} Which seasons exhibit $S^* > 0$ at each $\epsilon$.
 \end{itemize}
 
 % \begin{figure}[H]
@@ -35,25 +35,25 @@ For the Weighted Percent mechanism, we vary $\alpha$ (judge weight) from 0.3 to 
 
 \begin{table}[H]
     \centering
-    \caption{Wrongful Eliminations vs.\ Judge Weight $\alpha$}
+    \caption{Definite-Wrongful ($|\mathcal{D}_W|$) vs.\ Judge Weight $\alpha$}
     \label{tab:alpha_sensitivity}
     \begin{tabular}{cccc}
         \toprule
-        $\alpha$ & Wrongful Elim. & Rate & Change vs.\ Current \\
+        $\alpha$ & $|\mathcal{D}_W|$ & Rate & Reduction vs.\ Current \\
         \midrule
-        0.30 & 12 & 5.2\% & -70.0\% \\
-        0.40 & 7 & 3.0\% & -82.5\% \\
-        0.50 & 5 & 2.2\% & -87.5\% \\
-        0.55 & 4 & 1.7\% & -90.0\% \\
-        \textbf{0.60} & \textbf{3} & \textbf{1.3\%} & \textbf{-92.5\%} \\
-        0.65 & 4 & 1.7\% & -90.0\% \\
-        0.70 & 8 & 3.5\% & -80.0\% \\
-        0.80 & 18 & 7.8\% & -55.0\% \\
+        0.30 & 19 & 8.3\% & 52.5\% \\
+        0.40 & 12 & 5.2\% & 70.0\% \\
+        0.50 & 6 & 2.6\% & 85.0\% \\
+        0.55 & 4 & 1.7\% & 90.0\% \\
+        \textbf{0.60} & \textbf{3} & \textbf{1.3\%} & \textbf{92.5\%} \\
+        0.65 & 4 & 1.7\% & 90.0\% \\
+        0.70 & 8 & 3.5\% & 80.0\% \\
+        0.80 & 18 & 7.8\% & 55.0\% \\
         \bottomrule
     \end{tabular}
 \end{table}
 
-\noindent\textbf{Key Finding:} The optimal range is $\alpha \in [0.55, 0.65]$, with $\alpha = 0.6$ achieving the global minimum. The mechanism is robust to small perturbations in $\alpha$.
+\noindent\textbf{Key Finding:} The optimal range is $\alpha \in [0.55, 0.65]$, with $\alpha = 0.6$ minimizing definite-wrongful count to 3. The mechanism is robust to small perturbations in $\alpha$.
 
 % 7.3 Bootstrap 稳定性
 \subsection{Bootstrap Stability Analysis}
@@ -63,7 +63,7 @@ To assess estimation stability, we perform 1,000 bootstrap resamples at the seas
 
 \begin{itemize}[itemsep=0.2em]
     \item \textbf{Fan vote bounds:} 95\% CI for median bound width is $[7.6\%, 9.1\%]$.
-    \item \textbf{Professional dancer effect:} 95\% CI for variance explained is $[38.2\%, 47.6\%]$.
+    \item \textbf{Professional dancer effect:} 95\% CI for C-index improvement $\Delta C$ is $[0.06, 0.12]$.
     \item \textbf{Weighted Percent wrongful rate:} 95\% CI is $[0.4\%, 2.6\%]$ (robust improvement over current system).
 \end{itemize}
 
@@ -95,7 +95,7 @@ We validate Model 2 (survival analysis) using leave-one-season-out cross-validat
     \end{tabular}
 \end{table}
 
-\noindent\textbf{Key Finding:} The model achieves a mean C-index of 0.72, indicating good discriminative ability. Notably, the anomalous season S32 has the lowest C-index (0.54), confirming that our anomaly detection correctly identifies seasons where standard models fail.
+\noindent\textbf{Key Finding:} The model achieves a mean C-index of 0.72, indicating good discriminative ability. Notably, the mismatch season S32 has the lowest C-index (0.54), confirming that our mismatch detection correctly identifies seasons where standard models underperform.
 
 % 7.5 数据扰动鲁棒性
 \subsection{Data Perturbation Robustness}
@@ -106,5 +106,5 @@ We add Gaussian noise to judge scores ($\sigma = 1$ point) and re-run the invers
 \begin{itemize}[itemsep=0.2em]
     \item \textbf{Bound stability:} Median absolute change in bounds is 1.2 percentage points.
     \item \textbf{Ranking consistency:} 94.3\% of contestant rankings are preserved.
-    \item \textbf{Anomaly persistence:} S32 and S33 remain flagged as anomalies in all perturbation trials.
+    \item \textbf{Mismatch persistence:} S32 and S33 remain flagged in all perturbation trials.
 \end{itemize}
